yaml/kodowanie/hashuj-kodowanie-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-01-26T00:05:44Z"
  labels:
    app: hashuj-kodowanie-deploy
  name: hashuj-kodowanie-svc
  namespace: labproj24
  resourceVersion: "80048970"
  uid: 882ee765-a3dd-43e8-b10b-6541f3b7f14b
spec:
  clusterIP: 172.30.7.120
  clusterIPs:
  - 172.30.7.120
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3003
    protocol: TCP
    targetPort: 3003
  selector:
    app: hashuj-kodowanie-deploy
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
